<resources>
    <string name="app_name">AnimeWatcher</string>

    <string name="player_cast_to_device">Cast to Device</string>
    <string name="player_chromecast">ChromeCast</string>
    <string name="player_cast_others">Others</string>
    <string name="player_cast_play_remote">Play on Remote</string>
    <string name="player_next_episodes">Next Episodes</string>

    <string name="search_search_text">Search Text</string>
    <string name="search_search">Search</string>

    <string name="menu_history">History</string>
    <string name="menu_next_episodes">Next Episodes</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <string name="history_empty_text">The history is empty. Go watch something!</string>
    <string name="history_item_unknown_text">=( Unknown Item</string>
</resources>
