<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="brunodles.animewatcher.player.PlayerActivity"
        >

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:minHeight="240dp"
            app:resize_mode="fixed_width"
            />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/otherContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                >

                <android.support.v7.app.MediaRouteButton
                    android:id="@+id/chromeCastButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:mediaRouteTypes="user"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    tools:targetApi="jelly_bean"
                    />

                <ImageButton
                    android:id="@+id/othersCastButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/player_cast_to_device"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:src="@drawable/ic_cast_black_24dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/player_chromecast"
                    />

                <TextView
                    android:id="@+id/othersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/player_cast_others"
                    />

                <Button
                    android:id="@+id/playRemote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:text="@string/player_cast_play_remote"
                    />

                <TextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:textIsSelectable="true"
                    tools:text="One Piece"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/player_next_episodes"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/nextEpisodes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    app:nestedScrollingEnabled="@{false}"
                    />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="@dimen/navigation_margin"
                    />

            </GridLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</layout>